<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mind.hw6.SignUpFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundLight">

    <ImageView
        android:id="@+id/signup_logo"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/task_icon"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/sign_up_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"/>
        <EditText
            android:id="@+id/sign_up_email_input"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/White"
            android:textSize="12sp"
            android:hint="@string/emailhint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/signup_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordtitle"/>
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHighlight="@color/White"
            android:textSize="12sp"
            android:hint="@string/passwordhint"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/sign_up_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordtitle"/>
            <EditText
                android:id="@+id/sign_up_confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/White"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:hint="@string/repeat_password"/>
        </LinearLayout>

    <Button
        android:id="@+id/sign_up_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"/>




</LinearLayout>